# bountyland_EN

./: .env.example  .gitignore  .vercelignore  AGENT_ARCHITECTURE_PLAN.md  AGENT_ARCHITECTURE_PLAN_ZH.md  Agent_audited文件GPT5.5脑爆  Hackathon Project Documentation.md  README.md  agent_audited_compute_outsourcing_platform.md  frontend-debug-agent-flow.zh.md  frontend.md  package-lock.json  package.json  present.pptx  vercel.json
agent_diagrams/: 01-overall-architecture.mmd  02-task-intake-agent.mmd  03-dataset-miner.mmd  (+6 more)
aurora-agent-core/: .env.example  .gitignore  AGENT_ARCHITECTURE_PLAN2.0.md  README.md  environment.yml  pyproject.toml
aurora-agent-core/aurora_agent_core/: __init__.py  api.py  cli.py  runner.py
aurora-agent-core/aurora_agent_core/agents/: task_intake_graph.py
aurora-agent-core/aurora_agent_core/core/: router.py  trace.py
aurora-agent-core/aurora_agent_core/llm/: __init__.py  zai_client.py
aurora-agent-core/aurora_agent_core/miners/: dataset_miner_graph.py  debug_miner_graph.py
aurora-agent-core/aurora_agent_core/registry/: __init__.py  loader.py
aurora-agent-core/aurora_agent_core/schemas/: task_spec.py
aurora-agent-core/aurora_agent_core/utils/: files.py
aurora-agent-core/docs/: agent-usage-guide.zh.md  architecture.zh.md  vuldebugger-debug-agent-logic.zh.md
aurora-agent-core/examples/: run_dataset.py  run_intake.py
aurora-agent-core/registry/: dataset_miner.json  debug_miner.json
aurora-agent-core/tests/: test_api.py  test_graphs.py  test_llm_decompose.py  test_osv_connector.py  test_registry_architecture.py  test_zai_client.py
(+71 files in other folders)
