[project]
name = "aurora-agent-core"
version = "0.1.0"
description = "LangGraph-based MVP agent backend for task intake, routing, dataset mining, and future debug mining."
requires-python = ">=3.9"
dependencies = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0"
]

[project.scripts]
aurora-agent = "aurora_agent_core.cli:main"
aurora-agent-api = "aurora_agent_core.api:main"
aurora-agent-zai-smoke = "aurora_agent_core.llm.zai_client:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aurora_agent_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
